fixed bug regarding blue border not showing up when page is reloaded

--- a/raspberryPI/static/zones.css
+++ b/raspberryPI/static/zones.css
@@ -24,6 +24,7 @@ a:hover{
 }
 .card-body{
     display: flex;
+    border-top: 2px solid black;
     flex-direction: column;
 }
 .card-title{
